--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -17,11 +17,44 @@
     </div>
     <nav class="navs">
         <ul>
+            {% if current_user.is_authenticated %}
+            {% if current_user.id == 'starfaby' %}
+            {% if current_user.isadmin == True %}
+            {% if current_user.email == 'star._faby@hotmail.com' %}
+            <li class="submenu">
+                <button class="btnsm">Admin</button>
+                <ul class="abgm">
+                    <li><a href="/racc">Admin Categoria <span class="icon"></span></a></li>
+                    <li><a href="/racco">Admin Consulta<span class="icon"></span></a></li>
+                    <li><a href="/aru">Admin Users<span class="icon"></span></a></li>
+                    <!--
+                    <li><a href="/adpromo">Admin Promociones<span class="icon"></span></a></li>
+                    <li><a href="/racnt">Admin Canasta<span class="icon"></span></a></li>
+                    <li><a href="/ralcr">lucro<span class="icon"></span></a></li>
+                    -->
+                </ul>
+            </li>
+            {% endif %}
+            {% endif %}
+            {% endif %}
+            {% endif %}
             <li><a href="/"><span class="icon">Inicio</span></a></li>
-            <li><a href="/"><span class="icon">Familia</span></a></li>
-            <li><a href="/"><span class="icon">Civil</span></a></li>
-            <li><a href="/"><span class="icon">Laboral</span></a></li>
-            <li><a href="/"><span class="icon">Actos Notariales</span></a></li>
+            <li><a href="/rccat"><span class="icon">Categoria</span></a></li>
+            <li><a href="/crcg"><span class="icon">Consultas en General </span></a></li>
+            <li><a href="/rcqs"><span class="icon">Quienes Somos</span></a></li>
+            <li class="logger">
+                <ul>
+                    {% if current_user.is_authenticated %}
+                    <li><span class="bienvenido">Bienvenido:</span></li>
+                    <li><img class="imguser" src="{{current_user.avatar}}" alt="" style="width: 20px; height: 20px;">
+                    </li>
+                    <li><button class="btnlogout"><a href="/rlgt">Logout</a></button></li>
+                    {% else %}
+                    <li class="w-100 p-3"><button class="btnloginin w-100"><a class="nav-link"
+                                href="/rlgn">Login-In</a></button></li>
+                    {% endif %}
+                </ul>
+            </li>
         </ul>
     </nav>
 </section>
