creando caso y modificando la base de datos

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -24,8 +24,8 @@
             <li class="submenu">
                 <button class="btnsm">Admin</button>
                 <ul class="abgm">
-                    <li><a href="/racc">Admin Categoria <span class="icon"></span></a></li>
-                    <li><a href="/racco">Admin Consulta<span class="icon"></span></a></li>
+                    <li><a href="/aral">Admin Asuntos Legales <span class="icon"></span></a></li>
+                    <li><a href="/arc">Admin Casos<span class="icon"></span></a></li>
                     <li><a href="/aru">Admin Users<span class="icon"></span></a></li>
                     <!--
                     <li><a href="/adpromo">Admin Promociones<span class="icon"></span></a></li>
