--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -26,6 +26,7 @@
                 <ul class="abgm">
                     <li><a href="/aral">Admin Asuntos Legales <span class="icon"></span></a></li>
                     <li><a href="/arc">Admin Casos<span class="icon"></span></a></li>
+                    <li><a href="/arp">Admin Procesos<span class="icon"></span></a></li>
                     <li><a href="/aru">Admin Users<span class="icon"></span></a></li>
                     <!--
                     <li><a href="/adpromo">Admin Promociones<span class="icon"></span></a></li>
@@ -39,9 +40,8 @@
             {% endif %}
             {% endif %}
             <li><a href="/"><span class="icon">Inicio</span></a></li>
-            <li><a href="/rccat"><span class="icon">Asuntos Legales</span></a></li>
-            <li><a href="/rcqs"><span class="icon">Quienes Somos</span></a></li>
-            <li><a href="/aralgn"><span class="icon">Admin</span></a></li>
+            <li><a href="/cral"><span class="icon">Asuntos Legales</span></a></li>
+            <li><a href="#"><span class="icon">Quienes Somos</span></a></li>
             <li class="logger">
                 <ul>
                     {% if current_user.is_authenticated %}
