--- a/src/templates/client/clientProceso.html
+++ b/src/templates/client/clientProceso.html
@@ -7,14 +7,14 @@ Caso
 {% block content %}
 <div class="container">
     {% if verModal is true %}
-    {{ campv.adminModalProcesoVoz("Asistente Personal") }}
+    {{ campv.adminModalProcesoVoz("Asistente Personal", modProcVoz) }}
     {% endif %}
     <div class="well text-center display-3 m-3">Proceso</div>
     {% if procesoList != []: %}
     <div class="row">
         {% for item in procesoList %}
         <div class="col-md-3">
-            <a href="{{ url_for('crmpv.onGetClientControllerModalProcesoVoz', id=item.pfsaprcsid) }}" class="">
+            <a href="{{ url_for('crmpv.onGetClientControllerModalProceso', id=item.pfsaprcsid) }}" class="">
                 <div class="card imghover" style="width: 18rem; margin: 5px;">
                     <img style="width: 100%; height:100px ;" class="card-img-top" src="https://res.cloudinary.com/dvqgk49zn/image/upload/v1721234554/aux/voz_xxcaqy.png"
                         alt="Card image cap">
