Audio de un servicor externo

--- a/src/templates/admin/modal/adminModalProceso.html
+++ b/src/templates/admin/modal/adminModalProceso.html
@@ -20,6 +20,7 @@
     
                     {{renderField(adminFormsWtfProceso.nombre)}}
                     {{renderField(adminFormsWtfProceso.detalle)}}
+                    {{renderField(adminFormsWtfProceso.audiovoz)}}
                     {{renderField(adminFormsWtfProceso.estado)}}
                     {{renderField(adminFormsWtfProceso.selectcs)}}
                     
