--- a/src/templates/modal/clientModalPresentacionAbg.html
+++ b/src/templates/modal/clientModalPresentacionAbg.html
@@ -1,5 +1,5 @@
-{% macro adminModalProcesoVoz(title, modProcVoz) %}
-<div class="modal" id="modprocvoz" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+{% macro adminModalPresentacionAbg(title) %}
+<div class="modal" id="modpresenabg" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -8,15 +8,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                {% for item in modProcVoz %}
-                <a href="{{ url_for('crmpv.onGetClientControllerModalProcesoVoz', id=item.pfsaprcsid) }}">
-                    <h2 class="text-center display-4">Pulse para Salir</h2>
                     <img style="width: 100%; height:150px ;" class="card-img-top"
                         src="https://res.cloudinary.com/dvqgk49zn/image/upload/v1721408517/aux/vozanimate_knojmx.gif"
                         alt="Card image cap">
-                        <audio src="{{item.pfsaprcsaudiovoz}}"  autoplay></audio>
-                </a>
-                {% endfor %}
+                        <audio src="https://res.cloudinary.com/dpj9bxnhj/video/upload/v1722017363/presentacionabg_jbdtyy.mp3"  autoplay></audio>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
