modificando html del modalCarnetAbogado

--- a/src/templates/modal/modalCarnetAbogada.html
+++ b/src/templates/modal/modalCarnetAbogada.html
@@ -1,21 +1,18 @@
 {% macro macroModalCarnetAbogada(title) %}
-<div class="modal" id="mcarnetabogada" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal" id="mcarnetabogada" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">{{title}}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h1 class="modal-title fs-2 fw-bolder" id="staticBackdropLabel">{{title}}</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <h5 class="pull-right" id="exampleModalLabel">Matricula: <span>&nbsp;17-2022-525</span></h5>
-                <img class="w-100 h-75" src="https://pbs.twimg.com/media/CNbJ4OqWIAAlWWG.jpg" alt="">
+                <img class="w-100 h-75" src="https://res.cloudinary.com/dpj9bxnhj/image/upload/v1722265987/imgabgluz_mn9gjh.jpg" alt="">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
