--- a/src/templates/admin/adminCaso.html
+++ b/src/templates/admin/adminCaso.html
@@ -13,7 +13,7 @@ Admin User
     {{ amcasosaveupdate.adminModalCasoSave("Registro de Casos",adminFormsWtfCaso) }}
     {% endif %}
     {% if update is true %}
-    {{ amalsaveupdate.adminModalUserUpdate("Actualización de Usuarios", adminFormsWtfUser, dataUser) }}
+    {{ amcasosaveupdate.adminModalCasoUpdate("Actualización de Caso", adminFormsWtfCaso, dataCaso) }}
     {% endif %}
     <hr>
     <div class="row">
@@ -51,7 +51,7 @@ Admin User
                 {% if casoList != []: %}
                 {% for item in casoList.items %}
                 <tr>
-                    <th scope="row">{{item.pfsapcasoid}}</th>
+                    <th scope="row">#</th>
                     <td>{{item.pfsapcasonombre}}</td>
                     <td><img style="width: 50px ; height: 50px ;" src="{{item.pfsapcasoimage}}" alt=""></td>
                     <td>{{item.pfsapcasodetalle}}</td>
@@ -60,7 +60,7 @@ Admin User
                     <td>{{item.pfsapalid}}</td>
                     <td>
                         <button>
-                            <a href="#">
+                            <a href="{{ url_for('arc.onGetAdminControllerModalCasoUpdateView', id=item.pfsapcasoid) }}">
                                 actualizar
                             </a>
                         </button>
@@ -131,7 +131,7 @@ Admin User
 <script>
     window.onload = function () {
         $("#casosave").modal("show");
-        $("#userupdate").modal("show");
+        $("#casoUpdate").modal("show");
     }
 </script>
 {% endif %}
