--- a/src/templates/admin/modal/adminModalCaso.html
+++ b/src/templates/admin/modal/adminModalCaso.html
@@ -41,7 +41,7 @@
 <!-------------------------------UPDATE CASO---------------------------------->
 <!------------------------------------------------------------------------------->
 <!------------------------------------------------------------------------------->
-{% macro adminModalCasoUpdate(title, adminFormsWtfUser, dataUser) %}
+{% macro adminModalCasoUpdate(title, adminFormsWtfCaso, dataCaso) %}
 <div class="modal" id="casoUpdate" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -51,21 +51,16 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="#" method="post">
+                <form action="{{ url_for('arc.onGetAdminControllerCasoUpdate') }}" method="post">
 
-                    {{ adminFormsWtfUser.csrf_token }}
+                    {{ adminFormsWtfCaso.csrf_token }}
     
-                    {{renderField(adminFormsWtfUser.id, value=dataUser.pfsusersid)}}
-                    {{renderField(adminFormsWtfUser.cedula, value=dataUser.pfsuserscedula)}}
-                    {{renderField(adminFormsWtfUser.nombres, value=dataUser.pfsusersnombres)}}
-                    {{renderField(adminFormsWtfUser.apellidos, value=dataUser.pfsusersapellidos)}}
-                    {{renderField(adminFormsWtfUser.username, value=dataUser.pfsusersusername)}}
-                    {{renderField(adminFormsWtfUser.email, value=dataUser.pfsusersemail)}}
-                    {{renderField(adminFormsWtfUser.password, value=dataUser.pfsuserspassword)}}
-                    {{renderField(adminFormsWtfUser.direccion, value=dataUser.pfsusersdireccion)}}
-                    {{renderField(adminFormsWtfUser.celular, value=dataUser.pfsuserscelular)}}
-                    {{renderField(adminFormsWtfUser.telefono, value=dataUser.pfsuserstelefono)}}
-                    {{renderField(adminFormsWtfUser.estado, value=dataUser.pfsusersestado)}}
+                    {{renderField(adminFormsWtfCaso.id, value=dataCaso.pfsapcasoid)}}
+                    {{renderField(adminFormsWtfCaso.nombre, value=dataCaso.pfsapcasonombre)}}
+                    {{renderField(adminFormsWtfCaso.image, value=dataCaso.pfsapcasoimage)}}
+                    {{renderField(adminFormsWtfCaso.detalle, value=dataCaso.pfsapcasodetalle)}}
+                    {{renderField(adminFormsWtfCaso.selectal)}}
+                    {{renderField(adminFormsWtfCaso.estado, value=dataCaso.pfsapcasoestado)}}
                     
     
                     <button class="btn btn-primary" type="submit" >Guardar</button>
