update y delete del modulo caso

--- a/src/templates/admin/adminCaso.html
+++ b/src/templates/admin/adminCaso.html
@@ -67,7 +67,7 @@ Admin User
                     </td>
                     <td>
                         <button>
-                            <a href="#">Eliminar
+                            <a href="{{ url_for('arc.onGetAdminControllerCasoDelete', id=item.pfsapcasoid) }}">Eliminar
                             </a>
                         </button>
                     </td>
