--- a/src/templates/admin/modal/adminModalProceso.html
+++ b/src/templates/admin/modal/adminModalProceso.html
@@ -37,11 +37,11 @@
 {% endmacro %}
 <!------------------------------------------------------------------------------->
 <!------------------------------------------------------------------------------->
-<!-------------------------------UPDATE CASO---------------------------------->
+<!-------------------------------UPDATE PROCESO---------------------------------->
 <!------------------------------------------------------------------------------->
 <!------------------------------------------------------------------------------->
-{% macro adminModalCasoUpdate(title, adminFormsWtfUser, dataUser) %}
-<div class="modal" id="casoUpdate" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+{% macro adminModalProcesoUpdate(title, adminFormsWtfProceso, dataProceso) %}
+<div class="modal" id="procesoUpdate" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -52,21 +52,15 @@
             <div class="modal-body">
                 <form action="#" method="post">
 
-                    {{ adminFormsWtfUser.csrf_token }}
+                    {{ adminFormsWtfProceso.csrf_token }}
     
-                    {{renderField(adminFormsWtfUser.id, value=dataUser.pfsusersid)}}
-                    {{renderField(adminFormsWtfUser.cedula, value=dataUser.pfsuserscedula)}}
-                    {{renderField(adminFormsWtfUser.nombres, value=dataUser.pfsusersnombres)}}
-                    {{renderField(adminFormsWtfUser.apellidos, value=dataUser.pfsusersapellidos)}}
-                    {{renderField(adminFormsWtfUser.username, value=dataUser.pfsusersusername)}}
-                    {{renderField(adminFormsWtfUser.email, value=dataUser.pfsusersemail)}}
-                    {{renderField(adminFormsWtfUser.password, value=dataUser.pfsuserspassword)}}
-                    {{renderField(adminFormsWtfUser.direccion, value=dataUser.pfsusersdireccion)}}
-                    {{renderField(adminFormsWtfUser.celular, value=dataUser.pfsuserscelular)}}
-                    {{renderField(adminFormsWtfUser.telefono, value=dataUser.pfsuserstelefono)}}
-                    {{renderField(adminFormsWtfUser.estado, value=dataUser.pfsusersestado)}}
-                    
-    
+                    {{renderField(adminFormsWtfProceso.id, value=dataUser.pfsusersid)}}
+                    {{renderField(adminFormsWtfProceso.nombre, value=dataUser.pfsusersid)}}
+                    {{renderField(adminFormsWtfProceso.detalle, value=dataUser.pfsusersid)}}
+                    {{renderField(adminFormsWtfProceso.audiovoz, value=dataUser.pfsusersid)}}
+                    {{renderField(adminFormsWtfProceso.estado, value=dataUser.pfsusersid)}}
+                    {{renderField(adminFormsWtfProceso.selectcs)}}
+
                     <button class="btn btn-primary" type="submit" >Guardar</button>
                 </form>
             </div>
