agregando al modulo proceso el actualizar y eliminar

--- a/src/templates/admin/adminProceso.html
+++ b/src/templates/admin/adminProceso.html
@@ -65,7 +65,7 @@ Admin User
                     </td>
                     <td>
                         <button>
-                            <a href="#">Eliminar
+                            <a href="{{ url_for('arp.onGetAdminControllerProcesoDelete', id=item.pfsaprcsid) }}">Eliminar
                             </a>
                         </button>
                     </td>
