Añadiendo link pdf para descuento

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -60,6 +60,13 @@ Index
         </div>
     </div>
     <div class="row">
+        <div class="col-md-12">
+            <div class="pull-right">
+                <a href="https://drive.google.com/file/d/1jRNIlShVwx91UZg9MR370HMVgRyTEjU9/view?usp=sharing" target="_blank" rel="noopener noreferrer"><button class="btn btn-secondary"><span class="display-3">Imprima Su Descuento</span></button></a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col  text-center ">
             <span class="display-3"><strong>Premios</strong> </span>
         </div>
