agregando imagen gif de la pagina central

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,7 +48,7 @@ Index
             </div>
         </div>
         <div class="col-md-5">
-            <img class="w-100 h-75 p-0" src="https://i.gifer.com/6Jh.gif" alt="">
+            <img class="w-100 h-75 p-0" src="https://res.cloudinary.com/dpj9bxnhj/image/upload/v1725644903/logopantallaprincipal_zymrlj.gif" alt="">
         </div>
         <div class="col-md-4">
             <a href="https://www.google.com/maps/place/0%C2%B012'09.6%22S+78%C2%B029'37.8%22W/@-0.2028645,-78.493997,19z/data=!4m4!3m3!8m2!3d-0.2026674!4d-78.493828?entry=ttu"
@@ -68,7 +68,7 @@ Index
     </div>
     <div class="row">
         <div class="col  text-center ">
-            <span class="display-3"><strong>Premios</strong> </span>
+            <span class="display-3"><strong></strong> </span>
         </div>
     </div>
 </div>
