--- a/src/templates/client/clientCaso.html
+++ b/src/templates/client/clientCaso.html
@@ -9,7 +9,7 @@ Caso
     {% if casoList.count() >= 1: %}
     <div class="row d-flex justify-content-center">
         {% for item in casoList %}
-        <div class="col-md-3">
+        <div class="col-md-3 d-flex justify-content-center">
             <a href="{{ url_for('crp.onGetClientControllerProcesoListView', id=item.pfsapcasoid) }}" class="">
                 <div class="card imghover" style="width: 18rem; margin: 5px;">
                     <img style="width: 100%; height:100px ;" class="card-img-top" src="{{item.pfsapcasoimage}}"
