Aniadido comentario para recibir dudas de los clientes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,7 +47,7 @@ Index
                 </a>
             </div>
         </div>
-        <div class="col-md-5 m-4">
+        <div class="col-md-5 p-4">
             <img class="w-100 h-75 p-0" src="https://res.cloudinary.com/dpj9bxnhj/image/upload/v1725644903/logopantallaprincipal_zymrlj.gif" alt="">
         </div>
         <div class="col-md-4">
