--- a/src/templates/admin/adminProceso.html
+++ b/src/templates/admin/adminProceso.html
@@ -99,11 +99,11 @@ Admin User
 
                 {% if page==procesoList.page %}
                 <li class="page-item active"><a class="page-link"
-                        href="{{ url_for('aral.onGetAdminControllerAsuntosLegalesListView', page=page) }}">{{ page
+                        href="{{ url_for('arp.onGetAdminControllerProcesoListView', page=page) }}">{{ page
                         }}</a></li>
                 {% else %}
                 <li class="page-item"><a class="page-link"
-                        href="{{ url_for('aral.onGetAdminControllerAsuntosLegalesListView', page=page) }}">{{ page
+                        href="{{ url_for('arp.onGetAdminControllerProcesoListView', page=page) }}">{{ page
                         }}</a></li>
                 {% endif %}
 
@@ -113,7 +113,7 @@ Admin User
                 {% endfor %}
                 {% if procesoList.has_next %}
                 <li class="page-item"> <a class="page-link"
-                        href="{{ url_for('aral.onGetAdminControllerAsuntosLegalesListView', page=procesoList.next_num )}}">Next</a>
+                        href="{{ url_for('arp.onGetAdminControllerProcesoListView', page=procesoList.next_num )}}">Next</a>
                 </li>
                 {% else %}
                 <li class="page-item"> <a class="page link btn disabled" href="#">Previous</a></li>
