--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,6 +22,32 @@
 
 {% block content %}
 {% endblock %}
+<section>
+    <div class="containerComentario">
+        <div id="comentario">
+            <div>
+                <form action="/crcmt" method="post">
+                    <div class="form-group">
+                        <label class="text-white" for="txtComnetario">Comente su problema (max caracteres 110)</label>
+                        <textarea class="form-control" id="txtComentario" name="txtComentario" rows="3" maxlength="110"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="text-white" for="txtEmail">Ingrese su email para recibir su respuesta</label>
+                        <input type="email" class="form-control" name="txtEmail" id="txtEmail"
+                            aria-describedby="emailHelp" placeholder="Email...">
+                    </div>
+                    <div>
+                        <small id="emailHelp" class="form-text  text-white">El email es opcional</small>
+                    </div>
+                    <button type="submit" class="btn btn-primary m-2">Enviar</button>
+                </form>
+            </div>
+        </div>
+        <div>
+            <button type="button" id="btnComent" class="btn btn-secondary btnComentario"><span class="display-5">Comenta tu duda</span></button>
+        </div>
+    </div>
+</section>
 
 {% block footer %}
 {% include 'footer.html' %}
