--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -42,6 +42,7 @@
             <li><a href="/"><span class="icon">Inicio</span></a></li>
             <li><a href="/cral"><span class="icon">Asuntos Legales</span></a></li>
             <li><a href="#"><span class="icon">Quienes Somos</span></a></li>
+            <li><a href="/cra"><span class="icon">Auspicio</span></a></li>
             <li class="logger">
                 <ul>
                     {% if current_user.is_authenticated %}
