--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -39,12 +39,12 @@
                     <div>
                         <small id="emailHelp" class="form-text  text-white">El email es opcional</small>
                     </div>
-                    <button type="submit" class="btn btn-primary m-2">Enviar</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block m-2">Enviar</button>
                 </form>
             </div>
         </div>
         <div>
-            <button type="button" id="btnComent" class="btn btn-secondary btnComentario"><span class="display-5">Comenta tu duda</span></button>
+            <button type="button" id="btnComent" class="btnComentario"><span class="display-5 text-white">Comenta tu duda</span></button>
         </div>
     </div>
 </section>
