--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -28,6 +28,7 @@
                     <li><a href="/arc">Admin Casos<span class="icon"></span></a></li>
                     <li><a href="/arp">Admin Procesos<span class="icon"></span></a></li>
                     <li><a href="/aru">Admin Users<span class="icon"></span></a></li>
+                    <li><a href="/arcmt">Admin Comentario<span class="icon"></span></a></li>
                     <!--
                     <li><a href="/adpromo">Admin Promociones<span class="icon"></span></a></li>
                     <li><a href="/racnt">Admin Canasta<span class="icon"></span></a></li>
