--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,8 @@
                 <form action="/crcmt" method="post">
                     <div class="form-group">
                         <label class="text-white" for="txtComnetario">Comente su problema (max caracteres 110)</label>
-                        <textarea class="form-control" id="txtComentario" name="txtComentario" rows="3" maxlength="110"></textarea>
+                        <textarea class="form-control" id="txtComentario" name="txtComentario" rows="3" maxlength="110" ></textarea>
+                        <h3>Caracteres disponibles: <span id="cantidad">110</span></h3>
                     </div>
                     <div class="form-group">
                         <label class="text-white" for="txtEmail">Ingrese su email para recibir su respuesta</label>
